<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pack it Up!</string>
    <string name="ready_to_move_descr">A Friendly Storage App</string>
    <string name="box_storage_descr">Welcome to the Storage Page</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Begin string for each page -->

    <!--Nav Drawer Strings-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>


    <!--View Pager Strings-->
    <string-array name="colors">
        <item>Red 红色</item>
        <item>Orange 橙</item>
        <item>Yellow 黄色</item>
        <item>Green	绿色</item>
        <item>Blue 蓝色</item>
    </string-array>
    <string-array name="numbers">
        <item>One 一</item>
        <item>Two 二</item>
        <item>Three 三</item>
        <item>Four 四</item>
        <item>Five 五</item>
        <item>Six 六</item>
        <item>Seven	七</item>
        <item>Eight	八</item>
        <item>Nine 九</item>
        <item>Ten 十</item>
    </string-array>
    <string-array name="holidays">
        <item>Spring Festival	春节</item>
        <item>Dragon Boat Festival	端午节</item>
        <item>Moon Festival	中秋节</item>
        <item>Independence Day	美国国庆节</item>
        <item>Labor Day	劳动节</item>
    </string-array>


    <!-- Main Activity Page -->
    <string name="from_string">From:</string>
    <string name="to_string">To:</string>
    <string name="back_to_main">Back To Main Page</string>
    <string name="title_activity_from_main_activity2">FromMainActivity2</string>
    <string name="title_activity_from_main">FromMainActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="martin_stuff">Martin\'s Stuff</string>
    <string name="marcus_stuff">Marcus\'s Stuff</string>
    <string name="mason_stuff">Mason\'s Stuff</string>
    <string name="marge_stuff">Marges\'s Stuff</string>

    <!-- Settings strings -->
    <string name="settings_screen_descr">Storage App Settings</string>
    <string-array name="text_size_list">
        <item>14sp</item>
        <item>16sp</item>
        <item>18sp</item>
        <item>20sp</item>
        <item>22sp</item>
    </string-array>
    <string-array name="text_size_value_list">
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
    </string-array>

    <string-array name="text_color_list">
        <item>Black</item>
        <item>Navy Blue</item>
        <item>Cobalt Blue</item>
        <item>Pea</item>
        <item>Soylent Green</item>
        <item>FireBrick</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Plum</item>
        <item>Tan</item>
    </string-array>
    <string-array name="text_color_value_list">
        <item>#000000</item>
        <item>#000080</item>
        <item>#0047AB</item>
        <item>#78AB46</item>
        <item>#8BA870</item>
        <item>#B22222</item>
        <item>#FF0000</item>
        <item>#7D26CD</item>
        <item>#8B668B</item>
        <item>#926239</item>
    </string-array>


    <string name="title_activity_box">Storage</string>
    <string name="title_activity_storage_list">Storage</string>


    <!--Storage List Strings-->
    <string name="storage_list_title">List of Stuff</string>
    <string name="storage_list_title2">Sort by Room, Item Name, Box Name</string>
    <string name="title_activity_add_container">Add a Container</string>
    <string name="add_container_title">Fill out the information and click submit</string>
    <string name="add_container_name_hint">Container Name</string>
    <string name="add_container_description_hint">Container Description</string>

    <string name="button_submit_new_container_button_text">Add Container</string>

    <!--Item Activity-->
    <string name="title_activity_add_item">Add an Item</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_descr">Item Description</string>
    <string name="title_activity_update_item">Update an Item</string>
    <string name="picture">Pic</string>
    <string name="add_to_gallery">Add To Gallery</string>
    <string name="upload_imgur">Upload</string>
    <string name="delete_imgur">Delete</string>



    <!--Location Activity-->
    <string name="title_activity_add_location">Add Location</string>
    <string name="add_location_title">Add a new Location here</string>
    <string name="button_add_location_text">Add</string>
    <string name="title_activity_dbdev">DBDevActivity</string>


    <!--Database Developer Options, to be removed later-->
    <string name="db_dev_title">Database Developer Options</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_update_container">UpdateContainerActivity</string>


    <!--Search strings-->
    <string name="search_hint">Search PackItUp App</string>
    <string name="search_description">Search the App.</string>

</resources>
