<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marshong.packitup.ui.AddContainerActivity.AddContainerFragment">

    <TextView
        android:id="@+id/text_view_add_container_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="@string/title_activity_add_container" />

    <EditText
        android:id="@+id/edit_text_container_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_container_name_hint" />

    <EditText
        android:id="@+id/edit_text_container_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_container_description_hint" />

    <Spinner
        android:id="@+id/spinner_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>

    <Button
        android:id="@+id/button_submit_new_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_new_container_button_text" />

</LinearLayout>
